# sf-annual-report

./: .gitignore  README.md  all_funds.py  database.py  funds.py  holdings.py  main.py  pyproject.toml  query.py
